# McPainMKV

./: .gitignore  README.md  batchconvert.py  pyproject.toml
mcpainmkv/: __init__.py  convert.py  extract_bluray.py  info.py  main.py  videoinfo.py
src/: info.py
utils/: info.py
