[project]
name = "McPainMKV"
version = "0.1.0"
description = "My personal mkv converter for my media server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-normalize>=1.37.3",
    "psutil>=7.2.2",
    "subtitle-filter>=1.5.0",
    "vapoursynth>=73",
    "vsstubs>=1.0.2",
]

[project.scripts]
mcpain-mkv = "mcpainmkv:main"
